--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"e2e": "cypress open"
 	},
 	"dependencies": {
-		"next": "13.4.20-canary.40",
+		"next": "13.5.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -15,7 +15,7 @@
 		"@types/node": "18.0.6",
 		"@types/react": "18.2.8",
 		"@types/react-dom": "18.0.6",
-		"cypress": "12.3.0",
+		"cypress": "13.5.1",
 		"start-server-and-test": "1.15.2",
 		"typescript": "4.7.4"
 	}
