--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"e2e": "cypress open"
 	},
 	"dependencies": {
+		"cookies-next": "^4.1.0",
 		"next": "13.5.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
